--- a/src/app.css
+++ b/src/app.css
@@ -16,8 +16,32 @@ span {
 }
 
 .area-input {
-  width: 500px;
+  width: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.area-input input {
+  width: 100%;
+  margin-bottom: 12px;
+  height: 45px;
+  background-color: #272727;
+  border: 0;
+  border-radius: 6px;
+  color: #fff;
+  padding: 0 12px;
+  text-align: center;
+  font-size: 16px;
+}
+.area-input button {
+  width: 100%;
+  height: 43px;
+  border: 0;
+  border-radius: 6px;
+  background-color: rgb(47, 47, 241);
+  color: #fff;
+  font-size: 16px;
+}
+h2 {
+  margin-top: 22px;
 }
